<?xml version="1.0"?>
<package>
  <name>uncertainty_planning_examples</name>
  <version>0.0.0</version>
  <description>The uncertainty_planning_examples package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sdf_tools</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>uncertainty_planning_core</build_depend>
  <build_depend>fast_kinematic_simulator</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sdf_tools</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>uncertainty_planning_core</run_depend>
  <run_depend>fast_kinematic_simulator</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
